splitted execution methods

--- a/circolante_regione_alimentazione.ipynb
+++ b/circolante_regione_alimentazione.ipynb
@@ -28,7 +28,9 @@
       },
       "outputs": [],
       "source": [
-        "pip install odfpy"
+        "pip install odfpy\n",
+        "pip install pandas\n",
+        "pip install openpyxl"
       ]
     },
     {
@@ -42,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "J6TeRlmeS2vu"
       },
@@ -51,8 +53,7 @@
         "import pandas as pd\n",
         "from io import BytesIO\n",
         "import numpy as np\n",
-        "import os\n",
-        "from google.colab import drive"
+        "import os"
       ]
     },
     {
@@ -62,17 +63,6 @@
       },
       "source": [
         "Recupero i dataset dal progetto github"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "8JXQXP2eeMcG"
-      },
-      "outputs": [],
-      "source": [
-        "!git clone https://github.com/morkioj/parco_veicoli.git"
       ]
     },
     {
@@ -91,15 +81,49 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Esecuzione in colab con dataset salvati in drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "folder_path=\"/content/drive/MyDrive/Colab Notebooks/dataset/circolante\"\n",
+        "output_file=\"/content/circolante_powerbi.xlsx\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Esecuzione in colab con clonazione del progetto da github\n",
+        "!git clone https://github.com/morkioj/parco_veicoli.git\n",
+        "folder_path=\"/content/parco_veicoli/dataset/parco_veicoli_circolante/\"\n",
+        "output_file=\"/content/circolante_powerbi.xlsx\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Esecuzione in locale con progetto gia clonato da github\n",
+        "notebook_dir = os.getcwd()\n",
+        "folder_path = os.path.join(notebook_dir, 'dataset\\parco_veicoli_circolante')\n",
+        "output_file=\"circolante_powerbi.xlsx\"\n",
+        "print (folder_path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "qFWKLlAQ_Awb"
       },
       "outputs": [],
       "source": [
-        "#drive.mount('/content/drive')\n",
-        "#folder_path=\"/content/drive/MyDrive/Colab Notebooks/dataset/circolante\"\n",
-        "folder_path=\"/content/parco_veicoli/dataset/parco_veicoli_circolante/\"\n",
-        "file_path=\"\"\n",
         "file_prefix=\"Circolante_Copert\"\n",
         "sheet_name=\"AV_per_regione\"\n",
         "sheet_name2=\"AV per regione\"\n",
@@ -167,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "mfgRi_udWdEO"
       },
@@ -204,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "kA9X4b2K02RM"
       },
@@ -263,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "collapsed": true,
         "id": "ZVVfA2W883Zx"
@@ -283,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "Wc4nhEhoGPLH"
       },
@@ -336,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "collapsed": true,
         "id": "0DMQn1D1qCUx"
@@ -373,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "S9NLq-d5NTMW"
       },
@@ -415,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "MMEwwRMGy6Cg"
       },
@@ -427,7 +451,7 @@
         "df_graph = df_graph[df_graph['REGIONE'] != 'ITALIA']\n",
         "\n",
         "#esporto in excel\n",
-        "df_graph.to_excel(\"/content/circolante_powerbi.xlsx\")"
+        "df_graph.to_excel(\"circolante_powerbi.xlsx\")"
       ]
     }
   ],
